list align fix

--- a/client/src/pages/Profile/WatchedAnime/WatchedAnime.module.scss
+++ b/client/src/pages/Profile/WatchedAnime/WatchedAnime.module.scss
@@ -10,6 +10,9 @@
 }
 
 .watched-anime {
+  height: 100%;
+  padding-bottom: 200px;
+
   .title {
     padding-bottom: $padding-1;
     transition: all 0.3s;
@@ -19,12 +22,15 @@
     position: relative;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: auto;
-    grid-gap: 30px;
-    max-height: 450px;
+    grid-auto-rows: 185px;
+    grid-gap: 1rem;
+    height: 700px;
     overflow: hidden;
+    transition: all 1s;
 
-    transition: 0.3s all;
+    &.active {
+      height: 100%;
+    }
 
     &::after {
       content: "";
@@ -34,18 +40,13 @@
       pointer-events: none;
     }
 
-    &.active {
-      max-height: 100%;
-    }
-
     .watched-anime-card {
       position: relative;
       width: 100%;
       display: grid;
-      grid-template-columns: auto repeat(4, 1fr);
+      grid-template-columns: auto repeat(3, 1fr);
       gap: 20px;
       align-items: center;
-      padding: $spacing-2;
       background-color: $primary;
       border-radius: $radius-1;
 
